Feature/ikm 20240222 elk snomed integration migration