@@ -19,19 +19,19 @@ import java.nio.file.Files;
 import java.nio.file.Path;
 import java.util.concurrent.ConcurrentHashMap;
 import java.util.concurrent.atomic.AtomicInteger;
-import java.util.stream.Collectors;
 
 import org.eclipse.collections.api.list.ImmutableList;
 import org.eclipse.collections.api.list.primitive.ImmutableIntList;
 import org.semanticweb.owlapi.model.OWLAxiom;
 import org.semanticweb.owlapi.model.OWLClass;
+import org.semanticweb.owlapi.model.OWLDataFactory;
 import org.semanticweb.owlapi.model.OWLObjectProperty;
 
 import dev.ikm.tinkar.collection.SpinedIntObjectMap;
 import dev.ikm.tinkar.common.service.PrimitiveData;
 import dev.ikm.tinkar.common.sets.ConcurrentHashSet;
 
-public class ElkOwlAxiomData {
+public class ElkOwlData {
 
 	public final SpinedIntObjectMap<ImmutableList<OWLAxiom>> nidAxiomsMap = new SpinedIntObjectMap<>();
 
@@ -49,33 +49,47 @@ public class ElkOwlAxiomData {
 
 	public ImmutableIntList classificationConceptSet = null;
 
+	private OWLDataFactory dataFactory;
+
+	public ElkOwlData(OWLDataFactory dataFactory) {
+		this.dataFactory = dataFactory;
+	}
+
+	private OWLObjectProperty getOwlObjectProperty(int id) {
+		return dataFactory.getOWLObjectProperty(":" + id, ElkOwlPrefixManager.getPrefixManager());
+	}
+
+	private OWLClass getOwlClass(int id) {
+		return dataFactory.getOWLClass(":" + id, ElkOwlPrefixManager.getPrefixManager());
+	}
+
 	public OWLObjectProperty getRole(int roleNid) {
-		return this.nidRoleMap.computeIfAbsent(roleNid, ElkOwlManager::getOwlObjectProperty);
+		return this.nidRoleMap.computeIfAbsent(roleNid, this::getOwlObjectProperty);
 	}
 
 	public OWLClass getConcept(int conceptNid) {
-		return this.nidConceptMap.computeIfAbsent(conceptNid, ElkOwlManager::getOwlClass);
+		return this.nidConceptMap.computeIfAbsent(conceptNid, this::getOwlClass);
 	}
 
 	public void writeConcepts(Path path) throws Exception {
 		Files.write(path, nidConceptMap.keySet().stream() //
 				.map(key -> PrimitiveData.publicId(key).asUuidArray()[0] + "\t" + PrimitiveData.text(key)) //
 				.sorted() //
-				.collect(Collectors.toList()));
+				.toList());
 	}
 
 	public void writeRoles(Path path) throws Exception {
 		Files.write(path, nidRoleMap.keySet().stream() //
 				.map(key -> PrimitiveData.publicId(key).asUuidArray()[0] + "\t" + PrimitiveData.text(key)) //
 				.sorted() //
-				.collect(Collectors.toList()));
+				.toList());
 	}
 
 	public void writeAxioms(Path path) throws Exception {
 		Files.write(path, axiomsSet.stream() //
-				.map(ElkOwlManager::removePrefix) //
+				.map(ElkOwlPrefixManager::removePrefix) //
 				.sorted() //
-				.collect(Collectors.toList()));
+				.toList());
 	}
 
 }
